--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@ body,html{
 }
 
 .bgimage1{
-	background-image: url(web1.jpg);
+	background-image: url(https://wallpaperscraft.com/image/mountains_sky_sunset_peaks_97149_1920x1080.jpg);
 	min-height: 100%;
 }
 
 .bgimage2{
-	background-image: url(web2.jpg);
+	background-image: url(https://wallpaperscraft.com/image/field_dawn_sky_beautiful_scenery_87654_1920x1080.jpg);
 	min-height: 400px;
 }
 
 .bgimage3{
-	background-image: url(web3.jpg);
+	background-image: url(https://wallpaperscraft.com/image/river_grass_trees_road_87714_1920x1080.jpg);
 	min-height: 400px;
 }
 
